Updating repos and papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,263 @@
 ---
 ---
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
+@inproceedings{golbabaee2019geometry,
+  title={Geometry of deep learning for magnetic resonance fingerprinting},
+  author={Golbabaee, Mohammad and Chen, Dongdong and G{\'o}mez, Pedro A and Menzel, Marion I and Davies, Mike E},
+  booktitle={ICASSP 2019-2019 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={7825--7829},
+  year={2019},
+  organization={IEEE},
+  award={Oral},
+  award_name={Oral},
   selected={true},
-  inspirehep_id = {3255}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
+@inproceedings{chen2019deep,
+  title={Deep fully convolutional network for MR fingerprinting},
+  author={Chen, Dongdong and Golbabaee, Mohammad and G{\'o}mez, Pedro A and Menzel, Marion Irene and Davies, Mike E},
+  booktitle={Medical Imaging with Deep Learning, MIDL 2019: Extended Abstract Track},
+  year={2019}
+}
+
+@inproceedings{bano2019high,
+  title={High-resolution Isotropic Whole Brain T2 Mapping with Model-based Super-resolution Reconstruction},
+  author={Bano, Wajiha and Piredda, Gian Franco and Davies, Michael and Marshall, Ian and Golbabaee, Mohammad and Kober, Tobias and Thiran, Jean-Philippe and Meuli, Reto and Hilbert, Tom},
+  booktitle={ISMRM 27th Annual Meeting \& Exhibition, 11-16 May 2019},
+  year={2019},
+}
+
+@article{golbabaeedeep,
+  title={Deep MR Fingerprinting with total-variation and low-rank subspace priors},
+  author={Golbabaee, Mohammad and Pirkl, Carolin M and Menzel, Marion I and Buonincontri, Guido and G{\'o}mez, Pedro A},
+  booktitle={ISMRM 27th Annual Meeting \& Exhibition, 11-16 May 2019},
+  year={2019},
+  award={Oral},
+  award_name={Oral},
+  selected={true},
+}
+
+@article{benjamin2019multi,
+  title={Multi-shot Echo Planar Imaging for accelerated Cartesian MR Fingerprinting: an alternative to conventional spiral MR Fingerprinting},
+  author={Benjamin, Arnold Julian Vinoj and G{\'o}mez, Pedro A and Golbabaee, Mohammad and Mahbub, Zaid Bin and Sprenger, Tim and Menzel, Marion I and Davies, Michael and Marshall, Ian},
+  journal={Magnetic resonance imaging},
+  volume={61},
+  pages={20--32},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@inproceedings{golbabaee2019spatio,
+  title={Spatio-temporal regularization for deep MR Fingerprinting},
+  author={Golbabaee, Mohammad and Chen, Dongdong and Davies, Mike E and Menzel, Marion Irene and G{\'o}mez, Pedro A},
+  booktitle={Medical Imaging with Deep Learning, MIDL 2019: Extended Abstract Track},
+  year={2019}
+}
+
+@article{benjamin2019multi,
+  title={Multi-shot Echo Planar Imaging for accelerated Cartesian MR Fingerprinting: an alternative to conventional spiral MR Fingerprinting},
+  author={Benjamin, Arnold Julian Vinoj and G{\'o}mez, Pedro A and Golbabaee, Mohammad and Mahbub, Zaid Bin and Sprenger, Tim and Menzel, Marion I and Davies, Michael and Marshall, Ian},
+  journal={Magnetic resonance imaging},
+  volume={61},
+  pages={20--32},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{chen2019fully,
+  title={A fully convolutional network for MR fingerprinting},
+  author={Chen, Dongdong and Golbabaee, Mohammad and G{\'o}mez, Pedro A and Menzel, Marion I and Davies, Mike E},
+  journal={arXiv preprint arXiv:1911.09846},
+  year={2019}
+}
+
+@article{golbabaee2019coverblip,
+  bibtex_show={true},
+  title={CoverBLIP: accelerated and scalable iterative matched-filtering for magnetic resonance fingerprint reconstruction},
+  author={Golbabaee, Mohammad and Chen, Zhouye and Wiaux, Yves and Davies, Mike},
+  journal={Inverse Problems},
+  volume={36},
+  number={1},
+  pages={015003},
+  year={2019},
+  publisher={IOP Publishing}
+}
+
+@article{cencini2020effects,
+  bibtex_show={true},
+  title={Effects of spatial encoding strategies on 2D and 3D magnetic resonance fingerprinting},
+  author={Cencini, Matteo and G{\'o}mez, Pedro A and Golbabaee, Mohammad and Schulte, Rolf F and Fallo, Giada and Peretti, Luca and Tosetti, Michela and Menze, Bjoern H and Buonincontri, Guido},
+  journal={Magnetic Resonance in Medicine},
+  year={2020},
+  publisher={Wiley}
+}
+
+@article{pretti2020neural,
+  bibtex_show={true},
+  title={Neural network inference for three-dimensional quantitative transient-state imaging (QTI)},
+  author={Pretti, Luca and Cencini, Matteo and Golbabaee, Mohammad and others},
+  journal={Magnetic Resonance in Medicine},
+  year={2020},
+  publisher={Wiley}
+}
+
+@inproceedings{chen2020compressive,
+  bibtex_show={true},
+  title={Compressive mr fingerprinting reconstruction with neural proximal gradient iterations},
+  author={Chen, Dongdong and Davies, Mike E and Golbabaee, Mohammad},
+  booktitle={Medical Image Computing and Computer Assisted Intervention--MICCAI 2020: 23rd International Conference, Lima, Peru, October 4--8, 2020, Proceedings, Part II 23},
+  pages={13--22},
+  year={2020},
+  organization={Springer},
+  award={Oral},
+  award_name={Oral},
+  selected={true},
+}
+
+
+
+@article{bano2020model,
+  bibtex_show={true},
+  title={Model-based super-resolution reconstruction of T2 maps},
+  author={Bano, Wajiha and Piredda, Gian Franco and Davies, Mike and Marshall, Ian and Golbabaee, Mohammad and Meuli, Reto and Kober, Tobias and Thiran, Jean-Philippe and Hilbert, Tom},
+  journal={Magnetic resonance in medicine},
+  volume={83},
+  number={3},
+  pages={906--919},
+  year={2020},
   publisher={Wiley Online Library}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
+@article{gomez2020rapid,
   bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  title={Rapid three-dimensional multiparametric MRI with quantitative transient-state imaging},
+  author={G{\'o}mez, Pedro A and Cencini, Matteo and Golbabaee, Mohammad and Schulte, Rolf F and Pirkl, Carolin and Horvath, Izabela and Fallo, Giada and Peretti, Luca and Tosetti, Michela and Menze, Bjoern H and others},
+  journal={Scientific reports},
+  volume={10},
+  number={1},
+  pages={13769},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
 }
 
-@book{przibram1967letters,
+@article{cortinhas2020temporal,
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+  title={A temporal multiscale approach for MR Fingerprinting},
+  author={Cortinhas, Samuel and Golbabaee, Mohammad and Ehrhardt, Matthias J},
+  journal={arXiv preprint arXiv:2010.03386},
+  year={2020}
 }
+
+
+@article{golbabaee2021compressive,
+  bibtex_show={true},
+  title={Compressive MRI quantification using convex spatiotemporal priors and deep encoder-decoder networks},
+  author={Golbabaee, Mohammad and Buonincontri, Guido and Pirkl, Carolin M and Menzel, Marion I and Menze, Bjoern H and Davies, Mike and G{\'o}mez, Pedro A},
+  journal={Medical image analysis},
+  volume={69},
+  pages={101945},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{pirkl2021accelerated,
+  bibtex_show={true},
+  title={Accelerated 3D whole-brain T1, T2, and proton density mapping: feasibility for clinical glioma MR imaging},
+  author={Pirkl, Carolin M and Nunez-Gonzalez, Laura and Kofler, Florian and Endt, Sebastian and Grundl, Lioba and Golbabaee, Mohammad and G{\'o}mez, Pedro A and Cencini, Matteo and Buonincontri, Guido and Schulte, Rolf F and others},
+  journal={Neuroradiology},
+  pages={1--21},
+  year={2021},
+  publisher={Springer}
+}
+
+@inproceedings{chen2022deep,
+  bibtex_show={true},
+  title={Deep unrolling for magnetic resonance fingerprinting},
+  author={Chen, Dongdong and Davies, Mike E and Golbabaee, Mohammad},
+  booktitle={2022 IEEE 19th International Symposium on Biomedical Imaging (ISBI)},
+  pages={1--4},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{fatania2022plug,
+  bibtex_show={true},
+  title={A plug-and-play approach to multiparametric quantitative MRI: image reconstruction using pre-trained deep denoisers},
+  author={Fatania, Ketan and Pirkl, Carolin M and Menzel, Marion I and Hall, Peter and Golbabaee, Mohammad},
+  booktitle={2022 IEEE 19th International Symposium on Biomedical Imaging (ISBI)},
+  pages={1--4},
+  year={2022},
+  organization={IEEE},
+  award={Oral},
+  award_name={Oral},
+  selected={true},
+}
+
+@article{golbabaee2022off,
+  bibtex_show={true},
+  title={An off-the-grid approach to multi-compartment magnetic resonance fingerprinting},
+  author={Golbabaee, Mohammad and Poon, Clarice},
+  journal={Inverse Problems},
+  volume={38},
+  number={8},
+  pages={085002},
+  year={2022},
+  publisher={IOP Publishing}
+}
+
+@inproceedings{fatania2023nonlinear,
+  bibtex_show={true},
+  title={Nonlinear Equivariant Imaging: Learning Multi-Parametric Tissue Mapping without Ground Truth for Compressive Quantitative MRI},
+  author={Fatania, Ketan and Chau, Kwai Y and Pirkl, Carolin M and Menzel, Marion I and Golbabaee, Mohammad},
+  booktitle={2023 IEEE 20th International Symposium on Biomedical Imaging (ISBI)},
+  pages={1--4},
+  year={2023},
+  organization={IEEE}
+}
+
+@article{bano2023joint,
+  bibtex_show={true},
+  title={Joint radial trajectory correction for accelerated T2* mapping on an MR-Linac},
+  author={Bano, Wajiha and Holmes, Will and Goodburn, Rosie and Golbabaee, Mohammad and Gupta, Amit and Withey, Sam and Tree, Alison and Oelfke, Uwe and Wetscherek, Andreas},
+  journal={Medical Physics},
+  volume={50},
+  number={11},
+  pages={7027--7038},
+  year={2023},
+  publisher={Wiley Online Library}
+}
+
+
+@inproceedings{golbabaee2024mri2qmap,
+  bibtex_show={true},
+  title={MRI2Qmap: compressed-sampled multiparametric quantitative MRI reconstruction using learned spatial priors from multimodal MRI datasets},
+  author={Golbabaee, Mohammad and Cencini, Matteo and Pirkl, Carolin and Menzel, Marion and Tosetti, Michela and Menze, Bjoern},
+  booktitle={2024 ISMRM \& ISMRT Annual Meeting \& Exhibition},
+  year={2024},
+  award={Selected as an Annual Meeting Program Committee (AMPC) Highlight paper},
+  award_name={Highlight Paper (top 1\%)},
+  additional_info={. *Selected as an Annual Meeting Program Committee (AMPC)* **Highlight paper (top 1\%)**},
+  selected={true}
+}
+
+@inproceedings{mayo2024deep,
+  bibtex_show={true},
+  title={Deep Image Priors for Magnetic Resonance Fingerprinting with Pretrained Bloch-Consistent Denoising Autoencoders},
+  author={Mayo, Perla and Cencini, Matteo and Fatania, Ketan and Pirkl, Carolin M and Menzel, Marion I and Menze, Bjoern H and Tosetti, Michela and Golbabaee, Mohammad},
+  booktitle={2024 IEEE International Symposium on Biomedical Imaging (ISBI)},
+  pages={1--4},
+  year={2024},
+  organization={IEEE},
+}
+
+
+@article{mayo2024stodip,
+  bibtex_show={true},
+  award={Recognised as Best Paper Award at the 15th International Workshop in Machine Learning in Medical Imaging (MLMI) 2024},
+  award_name={Best Paper Award},
+  title={StoDIP: Efficient 3D MRF image reconstruction with deep image priors and stochastic iterations},
+  author={Mayo, Perla and Cencini, Matteo and Pirkl, Carolin M and Menzel, Marion I and Tosetti, Michela and Menze, Bjoern H and Golbabaee, Mohammad},
+  journal={arXiv preprint arXiv:2408.02367},
+  year={2024},
+  selected={true},
+}
+
