--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -256,10 +256,8 @@
   award_name={Best Paper Award},
   title={StoDIP: Efficient 3D MRF image reconstruction with deep image priors and stochastic iterations},
   author={Mayo, Perla and Cencini, Matteo and Pirkl, Carolin M and Menzel, Marion I and Tosetti, Michela and Menze, Bjoern H and Golbabaee, Mohammad},
-  booktitle={International Workshop on Machine Learning in Medical Imaging},
-  pages={128--137},
+  journal={arXiv preprint arXiv:2408.02367},
   year={2024},
-  organization={Springer}
   selected={true},
 }
 
@@ -267,7 +265,7 @@
   title={Physics informed  guided diffusion for accelerated multi-parametric MRI reconstruction},
   author={Mayo, Perla and Pirkl, Carolin M. and Achim, Alin and Menze, Bjoern and Golbabaee, Mohammad},
   year={2025},
-  organization={IEEE},
+  organization={Preprint},
   ulr={http://p-mayo.github.io/files/2025_mrf_diph.pdf},
   additional_info={. Accepted for publication at MICCAI 2025}
 }
