Updating MRF-DiPh news

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -266,6 +266,6 @@
   author={Mayo, Perla and Pirkl, Carolin M. and Achim, Alin and Menze, Bjoern and Golbabaee, Mohammad},
   year={2025},
   organization={Preprint},
-  ulr={http://p-mayo.github.io/files/2025_mrf_diph.pdf},
-  additional_info={. Accepted for publication at MICCAI 2025}
+  url={http://p-mayo.github.io/files/2025_mrf_diph.pdf},
+  additional_info={Accepted for publication at MICCAI 2025}
 }
